--- a/lesson14_tabset/style.css
+++ b/lesson14_tabset/style.css
@@ -7,24 +7,40 @@
     padding: 10px;
     margin: 0 auto;
 
-    border: 2px solid black;
+    border: 1px solid lightgray;
+    border-radius: 5px;
 }
 
 /* tab-title */
+
+.tab-tabset .tab-title {
+    justify-content: center;
+}
 
 .tab-tabset .tab-title div {
     display: inline-block;
     user-select: none;
     cursor: pointer;
-
-    padding: 2px 15px;
-
-    background-color: lightcoral;
-    border: 1px solid black;
+    
+    padding: 10px 25px;
+    width: 40px;
+    
+    color: aliceblue;
+    background-color: rgb(77, 80, 236);
+    border-radius: 5px;
+    
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 14px;
 }
 
 .tab-tabset .tab-title div:hover {
-    background-color: red;
+    background-color: rgb(104, 106, 243);
+    transition: 0.5s;
+} 
+
+.tab-tabset .tab-title div:active {
+    background-color: rgb(44, 47, 221);
+    transition: 0.3s;
 } 
 
 /* tab-content */
@@ -35,8 +51,23 @@
 
 .tab-tabset .tab-content .tab-active {
     display: block;
+    animation: 0.7s showText;
+    animation-fill-mode: forwards;
+}
+
+@keyframes showText {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
 }
 
 .tab-content {
     padding: 10px 5px;
+
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 12px;
 }
+
