--- a/lesson17_ajax-contact-list/style.css
+++ b/lesson17_ajax-contact-list/style.css
@@ -4,12 +4,13 @@
 
 .container {
     margin: 5%;
+    padding: 25px;
 
     display: grid;
     grid-template-columns: 1fr 3fr;
 
-    width: 800px;
-    height: 420px;
+    max-width: 1050px;
+    min-width: 900px;
 
     border: 1px solid slategrey;
     box-shadow: 10px 10px 20px -5px rgba(0,0,0,0.2);
@@ -19,11 +20,13 @@
 
 .sidebar {
     display: inline-block;
-
-    min-width: 175px;
+    min-width: 220px;
 }
 
 .sidebar-list {
+    display: grid;
+    align-items: stretch;
+
     margin: 0;
     padding: 0;
     
@@ -65,8 +68,14 @@
 }
 
 .main h2 {
-    text-align: center;
+    text-align: right;
+    padding-right: 40px;
+    margin: 0;
     font-family: Georgia;
+}
+
+.main p {
+    margin: 0;
 }
 
 /* other */
