--- a/lesson16_ajax-gallery/style.css
+++ b/lesson16_ajax-gallery/style.css
@@ -26,7 +26,7 @@
 .background {
     z-index: 1;
     display: block;
-    position: absolute;
+    position: fixed;
     top: 0px;
     left: 0px;
     height: 100%; 
