--- a/lesson18_ajax-contact-list2/style.css
+++ b/lesson18_ajax-contact-list2/style.css
@@ -53,7 +53,7 @@
     color: red;
 }
 
-.sidebar button {
+.sidebar .new-button {
     width: 100px;
     background-color: darkblue;
     color: white;
@@ -61,12 +61,12 @@
     cursor: pointer;
     outline: none;
 }
-.sidebar button:hover{
+.sidebar .new-button:hover{
     background-color: black;
     color: white;
 }
 
-.sidebar button:active{
+.sidebar .new-button:active{
     text-decoration: underline dashed;
 }
 
@@ -77,7 +77,7 @@
     margin-left: 25px;
     display: grid;
     grid-template-columns: 300px 25px;
-    grid-template-rows: 25px auto;
+    grid-template-rows: 25px 300px 25px;
 }
 
 .form-container .remove-button {
@@ -108,8 +108,6 @@
     cursor: pointer;
     outline: none;
     user-select: none;
-    margin-top: 20px;
-
     background-color: lightgoldenrodyellow;
 }
 
@@ -129,6 +127,10 @@
     display: inline-block;
     height: 20px;
     margin-bottom: 5px;
+}
+
+.main-form input {
+    width: 99%;
 }
 
 /* other */
