--- a/lesson19_gallery-v3/style.css
+++ b/lesson19_gallery-v3/style.css
@@ -60,10 +60,6 @@
     height: 600px;
     margin-left: -300px;
     margin-top: -300px;
-
-    /* animation: 0.5s forwards full-opacity; */
-    /* opacity: 1; */
-    /* transition: opacity 2s; */
 }
 
 /* close button */
@@ -75,7 +71,8 @@
 
     background-color: transparent;
     opacity: 0.3;
-    color: white;
+    color: black;
+    background-color: white;
     height: 25px;
     width: 25px;
     cursor: pointer;
@@ -87,18 +84,9 @@
 
 /* pagination */
 
-.pagination-container {
-    margin: 0 auto;
-    width: 200px;
-
-    border: 1px solid red;
-    padding: 10px 50px
-}
-
 .page-list {
     display: inline-block;
-    /* justify-content: center; */
-    /* align-content: center; */
+    text-align: center;
 
     margin: 0 auto;
     width: 100%;
@@ -124,30 +112,9 @@
     border: 1px solid gray;
 }
 
-/* .page-list .page .active {
-    background-color: blue;
-    color: white; 
-} */
-
-/* loading */
-
-/* .loading {
-    background-color: red;
-    color: white;
-
-    z-index: 3;
-    display: block;
-    margin: 0 auto;
-
-    position: absolute;
-    top: 50%;
-    left: 50%;
-
-    width: 50px;
-    height: 50px;
-    margin-left: -25px;
-    margin-top: -25px;
-} */
+.page-list .amount-select {
+    display: inline-block;
+}
 
 /* animation  */
 
