--- a/lesson20_sticker-board/style.css
+++ b/lesson20_sticker-board/style.css
@@ -46,8 +46,6 @@ h1 {
     border-top: 5px dashed black;
     border-radius: 0.1px;
 
-    /* background: linear-gradient(135deg, rgba(255,234,0,1) 0%, rgba(254,182,69,1) 100%); */
-
     color: black;
 }
 
@@ -61,6 +59,7 @@ h1 {
     text-align: left;
     font-size: 1.2em;
     font-weight: bold;
+    font-family: 'Kalam', cursive;
 
     background-color: transparent;
 }
@@ -115,7 +114,8 @@ h1 {
     padding: 0;
     border: 1px solid transparent;
 
-    font-size: 0.8em;
+    font-size: 1em;
+    font-family: 'Kalam', cursive;
 
     width: 80%;
     height: 100%;
