--- a/lesson25_todo/src/style.scss
+++ b/lesson25_todo/src/style.scss
@@ -32,3 +32,12 @@ $yellow: rgb(238, 236, 144);
         background-color: $yellow;
     }
 }
+
+.todo-container {
+    width: 400px;
+    margin: 5%;
+}
+
+.todo-list {
+    margin: 5% 0;
+}
